* Bugfix: Avoid crash during shutdown if cache object had already been closed.
* Bugfix: Issue #119: The AVSEEK_FLAG_FRAME set should be used to seek to
  frames when building frame sets. Otherwise, output images may vary if
  searched for or continuously decoded.
* Bugfix: PTS to frame number and vice versa conversion for frame sets was
  incorrect if TBR did not equal frames per second.
* Enhancement: Record milliseconds for every log event.
* Enhancement: make check: Added file size check to frame set tests.
* Optimisation: When reopening after invalidating the cache, the size
  remained at 0. The original size now is once more reserved in order to
  prevent reallocations.
* Optimisation: To avoid reallocations, save enough space in the cache buffer
  to hold the entire frame set.
* Optimisation: Checking folders to see if they can be transcoded is completely
  pointless. Directories are now immediately skipped.

Important changes in 2.13 (2023-01-15):

* Added --prebuffer_time parameter. Files will be decoded until the buffer
  contains the specified playing time, allowing playback to start smoothly
  without lags. Works similar to --prebuffer_size but gives better control
  because it does not depend on the bit rate. An example: when set to
  25 seconds for HLS transcoding, this will make sure that at least 2 complete
  segments will be available once the file is released and visible.
* Feature: Closes #140: Filtering the files that will be encoded has been
  added. A comma-separated list of extensions is specified by the
  --include_extensions parameter. These file extensions are the only ones that
  will be transcoded.
  The entries support shell wildcard patterns.
* Feature: The --hide_extensions parameter syntax has been extended. The
  entries now support shell wildcard patterns.
* Bugfix: Closes #139: Additional files could be added using the --extensions
  parameter. However, this is no longer necessary; in the past, a file's