@@ -5441,8 +5441,8 @@ int FFmpeg_Transcoder::seek_frame()
             // So we position before the frame requested, and simply throw the first away.
 
             //#define PRESCAN_FRAMES  3
+            uint32_t seek_frame_no = m_last_seek_frame_no.exchange(0);
 #ifdef PRESCAN_FRAMES
-            int64_t seek_frame_no = m_last_seek_frame_noX;
             if (seek_frame_no > PRESCAN_FRAMES)
             {
                 seek_frame_no -= PRESCAN_FRAMES;
@@ -5453,11 +5453,8 @@ int FFmpeg_Transcoder::seek_frame()
                 seek_frame_no = 1;
             }
 
-            ret = skip_decoded_frames(seek_frame_no, true);
-#else
-            ret = skip_decoded_frames(m_last_seek_frame_no, true);
 #endif
-
+            ret = skip_decoded_frames(seek_frame_no, true);
             if (ret < 0)
             {
                 return ret;
