@@ -20,6 +20,7 @@ Important changes in 2.14 (2023-02-XX):
   searched for or continuously decoded.
 * Bugfix: PTS to frame number and vice versa conversion for frame sets was
   incorrect if TBR did not equal frames per second.
+* Bugfix: Fix seek requests that are being ignored with frame sets.
 * Enhancement: Record milliseconds for every log event.
 * Enhancement: make check: Added file size check to frame set tests.
 * Optimisation: When reopening after invalidating the cache, the size
